crates/gridlook-meta/tests/snapshots/netcdf_snapshots__simple_nc_storage_details_snapshot.snap
---
source: crates/gridlook-meta/tests/netcdf_snapshots.rs
expression: summary
---
{
  "format": "NetCdf",
  "root": {
    "name": "",
    "dims": [
      {
        "name": "time",
        "size": 4,
        "is_unlimited": false
      },
      {
        "name": "x",
        "size": 3,
        "is_unlimited": false
      },
      {
        "name": "y",
        "size": 2,
        "is_unlimited": false
      }
    ],
    "coords": [
      {
        "name": "time",
        "dtype": "int64",
        "dims": [
          "time"
        ],
        "shape": [
          4
        ],
        "attrs": [
          [
            "units",
            "days since 2024-01-01 00:00:00"
          ],
          [
            "calendar",
            "proleptic_gregorian"
          ]
        ],
        "preview": "0 1 2 3",
        "storage": {
          "layout": "Contiguous",
          "shuffle": false,
          "fletcher32": false,
          "endianness": "Little",
          "no_fill": false
        }
      },
      {
        "name": "x",
        "dtype": "float32",
        "dims": [
          "x"
        ],
        "shape": [
          3
        ],
        "attrs": [
          [
            "_FillValue",
            null
          ],
          [
            "units",
            "km"
          ],
          [
            "long_name",
            "Cross-shore distance"
          ]
        ],
        "preview": "-10.0 0.0 10.0",
        "storage": {
          "layout": "Contiguous",
          "shuffle": false,
          "fletcher32": false,
          "endianness": "Little",
          "no_fill": false
        }
      }
    ],
    "data_vars": [
      {
        "name": "salinity",
        "dtype": "float32",
        "dims": [
          "time",
          "x",
          "y"
        ],
        "shape": [
          4,
          3,
          2
        ],
        "attrs": [
          [
            "_FillValue",
            null
          ],
          [
            "units",
            "psu"
          ],
          [
            "long_name",
            "Sea Water Salinity"
          ]
        ],
        "storage": {
          "layout": "Contiguous",
          "shuffle": false,
          "fletcher32": false,
          "endianness": "Little",
          "no_fill": false
        }
      },
      {
        "name": "temperature",
        "dtype": "float32",
        "dims": [
          "time",
          "x",
          "y"
        ],
        "shape": [
          4,
          3,
          2
        ],
        "chunks": [
          2,
          3,
          2
        ],
        "attrs": [
          [
            "_FillValue",
            null
          ],
          [
            "units",
            "degC"
          ],
          [
            "long_name",
            "Sea Water Temperature"
          ]
        ],
        "storage": {
          "layout": "Chunked",
          "shuffle": false,
          "fletcher32": false,
          "endianness": "Little",
          "no_fill": false
        }
      }
    ],
    "attrs": [
      [
        "title",
        "gridlook simple fixture"
      ],
      [
        "institution",
        "NERACOOS"
      ],
      [
        "conventions",
        "CF-1.8"
      ]
    ],
    "children": [],
    "var_order": [
      "temperature",
      "salinity",
      "time",
      "x"
    ]
  },
  "file_info": {
    "kind": "netCDF-4",
    "nc_properties": "[nc-properties]",
    "superblock_version": 2,
    "is_netcdf4": true
  }
}
